@@ -86,7 +86,6 @@
     "enable_pr"
     "end"
     "equivariance"
-    "example_proof"
     "exit"
     "export_code"
     "extract"
@@ -533,7 +532,6 @@
     "code_pred"
     "corollary"
     "cpodef"
-    "example_proof"
     "function"
     "instance"
     "interpretation"
